syntax = "proto3";

package order;

option go_package = "./;order";

service OrderService {
    rpc CreateOrder (CreateOrderRequest) returns (CreateOrderResponse);
    rpc ListOrders (ListOrdersRequest) returns (ListOrdersResponse);
    rpc UpdateOrder (UpdateOrderRequest) returns (UpdateOrderResponse);
    rpc DeleteOrder (DeleteOrderRequest) returns (DeleteOrderResponse);
    rpc GetOrder (GetOrderRequest) returns (GetOrderResponse);
}

message OrderItem {
    int64 product_id = 1;
    int32 count = 2;
}

message Order {
    int64 client_id = 1;
    int64 order_id = 2;
    repeated OrderItem items = 3;
    string status = 4;
    string shipping_address = 5;
}

message CreateOrderRequest {
    int64 ClientId = 1;
    repeated OrderItem items = 2;
    string shipping_address = 3;
}

message CreateOrderResponse {
    Order order = 1;
}

message ListOrdersRequest {
    int64 ClientId = 1;
}

message ListOrdersResponse {
    repeated Order orders_list = 1;
}

message UpdateOrderRequest {
    Order order = 1;
    repeated OrderItem items = 2;
    string status = 3;
    string shipping_address = 4;
}

message UpdateOrderResponse {
    Order order = 1;
}

message DeleteOrderRequest {
    int64 order_id = 1;
}

message DeleteOrderResponse {
    bool success = 1;
}

message GetOrderRequest {
    int64 order_id = 1;
}

message GetOrderResponse {
    Order order = 1;
}