syntax = "proto3";
import "google/protobuf/empty.proto";

package product;
option go_package = "./;product";

service ProductService {
    rpc GetProduct (GetProductRequest) returns (GetProductResponse);
    rpc CreateProduct (CreateProductRequest) returns (CreateProductResponse);
    rpc ListProducts (ListProductsRequest) returns (ListProductsResponse);
    rpc BatchChangeStock (BatchChangeStockRequest) returns (google.protobuf.Empty);
}

message Product {
    int64 id = 1;
    string name = 2;
    double price = 3;
    int32 stock = 4;
}

message GetProductRequest {
    int64 id = 1;
}

message GetProductResponse {
    Product product = 1;
}

message CreateProductRequest {
    string Name = 1;
    double Price = 2;
    int32 Stock = 3;
}

message CreateProductResponse {
    Product product = 1;
}

message StockChangeItem {
    int64 product_id = 1;
    int32 delta = 2;
}

message BatchChangeStockRequest {
    repeated StockChangeItem items = 1;
}

message ListProductsRequest {
    int32 page = 1;
    int32 limit = 2;
}

message ListProductsResponse {
    repeated Product products = 1;
}
